syntax = "proto3";

package sjchat.users;

option java_multiple_files = true;
option java_package = "sjchat.users";
option java_outer_classname = "UserServiceProto";

service UserService {
    rpc createUser (UserDataRequest) returns (UserResponse);
    rpc getUser (UserRequest) returns (UserResponse);
    rpc updateUser (UserDataRequest) returns (UserResponse);
    rpc loginUser(LoginRequest) returns (LoginResponse);
    rpc logoutUser(Token) returns (LogoutResponse);
}

message User {
    int64 id = 1;
    string username = 2;
}

message UserDataRequest {
    int64 id = 1;
    string username = 2;
}

message LoginRequest {
    String username = 1;
    String password = 2;
}

message LogoutResponse {
    required bool authenticated = 1;
    optional String errorMessage = 2;
}

message LogoutResponse {
    required authenticated = 1;
    optional String errorMessage = 2;
}

message Token {
    String token;
}

message UserRequest {
    int64 id = 1;
}

message UserResponse {
    User user = 1;
}